# fastbase

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  server.py
app/: config.py  database.py  main.py  routes.py  web.py
app/models/: user.py
app/services/: user_service.py
app/templates/: base.html  index.html
app/templates/components/: connection_status.html  user_form.html  user_list.html
