[project]
name = "fastbase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.123.8",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "supabase>=2.25.0",
    "uvicorn>=0.38.0",
]
